--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
     "ts-node-dev": "^2.0.0",
     "tsc": "^2.0.4",
     "typescript": "^4.8.2"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.13",
+    "@types/ws": "^8.5.3",
+    "express": "^4.18.1",
+    "ws": "^8.8.1"
   }
 }
