--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/ws": "^8.5.3",
+    "cors": "^2.8.5",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "ws": "^8.8.1"
+    "socket.io": "^4.5.2"
   }
 }
