--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
     "tsc": "^2.0.4",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+      "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/qrcode": "^1.5.0"
   },
   "dependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
+    "@adiwajshing/baileys": "^4.4.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "qrcode": "^1.5.1",
     "socket.io": "^4.5.2"
   }
 }
