--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ tmp
 
 # Build
 public/css/main.css
-
+public/img/qrcode-start.png
 # Coverage reports
 coverage
 
@@ -46,11 +46,3 @@ cache/*
 
 
 # formats temp media
-assets/temp/*.png
-assets/temp/*.jpg
-assets/temp/*.jpeg
-assets/temp/*.webp
-assets/temp/*.gif
-assets/temp/*.mp4
-assets/temp/*.mp3
-assets/temp/*.pdf
