--- a/tsconfig.json
+++ b/tsconfig.json
@@ -98,6 +98,10 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true    ,
+    "typeRoots": [
+      "./typing-stubs",
+      "./node_modules/@types"
+]                            /* Skip type checking all .d.ts files. */
   }
 }
