--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
     "start": "node ./build/index.js"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.5",
+    "@types/qrcode": "^1.5.0",
     "ts-node-dev": "^2.0.0",
     "tsc": "^2.0.4",
-    "typescript": "^4.8.2",
-      "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/qrcode": "^1.5.0"
+    "typescript": "^4.8.2"
   },
   "dependencies": {
     "@adiwajshing/baileys": "^4.4.0",
+    "@hapi/boom": "^10.0.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "qrcode": "^1.5.1",
     "socket.io": "^4.5.2"
   }
