--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
-  "name": "smaugBot",
+  "name": "smaugbot",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/isaias-silva/smaugbot.git",
   "author": "isaias-silva <zackblackmangold@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev ./src/index.ts",
+    "build": "tsc",
+    "start": "node ./build/index.js"
+  },
+  "devDependencies": {
+    "ts-node-dev": "^2.0.0",
+    "tsc": "^2.0.4",
+    "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "@adiwajshing/baileys": "^4.4.0"
+  }
 }
