--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
-    "@adiwajshing/baileys": "^4.4.0"
+    "@adiwajshing/baileys": "^4.4.0",
+    "qrcode-terminal": "^0.12.0"
   }
 }
