--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smaugbot",
+  "name": "atendebot",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/isaias-silva/smaugbot.git",
