--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "start": "node ./build/index.js"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "electron": "^20.1.4",
     "ts-node-dev": "^2.0.0",
     "tsc": "^2.0.4",
     "typescript": "^4.8.3"
   },
   "dependencies": {
     "@adiwajshing/baileys": "^4.4.0",
-    "qrcode-terminal": "^0.12.0"
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "qrcode-terminal": "^0.12.0",
+    "socket.io": "^4.5.2"
   }
 }
