--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "author": "isaias-silva <zackblackmangold@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev ./src/index.ts",
     "build": "tsc",
-    "start": "node ./build/index.js"
+    "start": "tsc && electron ./build/index.js"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -21,6 +20,7 @@
   "dependencies": {
     "@adiwajshing/baileys": "^4.4.0",
     "cors": "^2.8.5",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.5.2"
