--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "isaias-silva <zackblackmangold@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev":"ts-node-dev ./src/index.ts",
+    "dev": "ts-node-dev ./src/index.ts",
     "build": "tsc",
     "start": "tsc && electron ./build/index.js"
   },
@@ -20,9 +20,11 @@
   },
   "dependencies": {
     "@adiwajshing/baileys": "^4.4.0",
+    "@types/qrcode": "^1.5.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.5.2"
   }
