--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "ts-node-dev ./src/index.ts",
     "build": "tsc",
-    "start": "tsc && electron ./build/index.js"
+    "start": "node ./build/index.js"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
