--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@adiwajshing/baileys": "^4.4.0",
+    "@adiwajshing/keyed-db": "^0.2.4",
     "@types/qrcode": "^1.5.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
