--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "dependencies": {
     "@adiwajshing/baileys": "^4.4.0",
     "@adiwajshing/keyed-db": "^0.2.4",
+    "@types/express-session": "^1.17.5",
     "@types/qrcode": "^1.5.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.5.2"
